force-app/main/default/objects/Link_IndividualHouseholdRelationship__c/Link_IndividualHouseholdRelationship__c.object-meta.xml
<CustomObject>
    <description>This Junction Object relates individuals with the households they belong to.</description>
    <label>Household Relationship</label>
    <nameField>
        <displayFormat>HM-IH-{00000}</displayFormat>
        <label>Household Membership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>