force-app/main/default/objects/Link_IndividualHouseholdRelationship__c/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, then the individual here is the Head of Household for the associated household.</description>
    <label>Head of Household</label>
    <type>Checkbox</type>
</CustomField>