force-app/main/default/objects/Link_IndividualHouseholdRelationship__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <description>This field captures the household that the individual on the other end of this junction is related to.</description>
    <label>Household</label>
    <referenceTo>Household__c</referenceTo>
    <relationshipLabel>Household Relationships</relationshipLabel>
    <relationshipName>Household_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>