force-app/main/default/objects/Link_IndividualHouseholdRelationship__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field represents the individual related to the household on this junction object.</description>
    <label>Individual</label>
    <referenceTo>Individual__c</referenceTo>
    <relationshipLabel>Household</relationshipLabel>
    <relationshipName>Household_Memberships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>